@@ -1,4 +1,6 @@
 # vim: set noexpandtab:
+2013-03-11 davide
+	* add Event::mllMcTruth
 2013-03-11 Matt
 	* Fixed but in passDeadRegion: forgot fabs() around DeltaPhi
 	* Added in sorting for signal jets
